syntax = "proto3";

package site;

import "core/file.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ApiFileUploadProto";

// options for php
option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		api.file.upload
 *
 * 功能描述：
 * 		上传文件资源
 *
 * 支持的错误ID：
 * 		success							//上传成功
 *  		error.alert						//上传失败
 */
service ApiFileUploadService {
    rpc upload(ApiFileUploadRequest) returns(ApiFileUploadResponse);
}

message ApiFileUploadRequest {
    core.File file = 1;			//上传文件资源<图片，语音，视频>
    core.FileDesc fileDesc = 2; //文件资源的描述
}

message ApiFileUploadResponse {
	string file_id = 1;			//上传资源标识ID
}
